// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APIGatewayProxyHandler handles BadRequestError response correctly 1`] = `
Object {
  "body": "{\\"errors\\":[{\\"name\\":\\"BadRequestError\\",\\"details\\":\\"BadRequestError message\\"}]}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`APIGatewayProxyHandler handles ForbiddenError response correctly 1`] = `
Object {
  "body": "{\\"errors\\":[{\\"name\\":\\"ForbiddenError\\",\\"details\\":\\"ForbiddenError message\\"}]}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 403,
}
`;

exports[`APIGatewayProxyHandler handles FormatError response correctly 1`] = `
Object {
  "body": "{\\"errors\\":[{\\"name\\":\\"BadRequestError\\",\\"details\\":\\"FormatError message\\"}]}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`APIGatewayProxyHandler handles HTTP 200 response correctly 1`] = `
Object {
  "body": "{\\"result\\":\\"HTTP 200\\"}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`APIGatewayProxyHandler handles HTTP 201 response correctly 1`] = `
Object {
  "body": "{\\"result\\":\\"HTTP 201\\"}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 201,
}
`;

exports[`APIGatewayProxyHandler handles HTTP 204 response correctly 1`] = `
Object {
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 204,
}
`;

exports[`APIGatewayProxyHandler handles InternalServerError response correctly 1`] = `
Object {
  "body": "{\\"errors\\":[{\\"name\\":\\"InternalServerError\\",\\"details\\":\\"InternalServerError\\"}]}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;

exports[`APIGatewayProxyHandler handles NotFoundError response correctly 1`] = `
Object {
  "body": "{\\"errors\\":[{\\"name\\":\\"NotFoundError\\",\\"details\\":\\"NotFoundError message\\"}]}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 404,
}
`;

exports[`APIGatewayProxyHandler handles RequestTimeoutError response correctly 1`] = `
Object {
  "body": "{\\"errors\\":[{\\"name\\":\\"RequestTimeoutError\\",\\"details\\":\\"RequestTimeoutError message\\"}]}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 408,
}
`;

exports[`APIGatewayProxyHandler handles UnauthorizedError response correctly 1`] = `
Object {
  "body": "{\\"errors\\":[{\\"name\\":\\"UnauthorizedError\\",\\"details\\":\\"UnauthorizedError message\\"}]}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 401,
}
`;

exports[`APIGatewayProxyHandler handles UnprocessableEntityError response correctly 1`] = `
Object {
  "body": "{\\"errors\\":[{\\"name\\":\\"UnprocessableEntityError\\",\\"details\\":\\"UnprocessableEntityError message\\"}]}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 422,
}
`;

exports[`APIGatewayProxyHandler handles ValidationError response correctly 1`] = `
Object {
  "body": "{\\"errors\\":[{\\"name\\":\\"BadRequestError\\",\\"details\\":\\"ValidationError message\\"}]}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;
